--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smoggy-sphere",
-  "type": "module",
+  "type": "commonjs",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
@@ -13,6 +13,9 @@
     "@astrojs/mdx": "^2.2.0",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
-    "astro": "^4.5.5"
+    "astro": "^4.5.5",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.3",
+    "mysql": "^2.18.1"
   }
 }
